--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -3,8 +3,8 @@
     <style name="App.Starting.Theme" parent="Theme.SplashScreen">
         
         <item name="windowSplashScreenBackground">@color/white</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/news_svgrepo_com</item>
-        <item name="splashScreenIconSize">50dp</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_news_app</item>
+        <item name="splashScreenIconSize">20dp</item>
         <item name="postSplashScreenTheme">@style/Theme.NewsApp</item>
         
     </style>
